@@ -4,8 +4,11 @@
 		<param name="RemoteHost" value="localhost"/>
 		<param name="Port" value="4445"/>
 	</appender>
+	<appender name="console" class="org.apache.log4j.ConsoleAppender">
+	</appender>
 	<root>
 		<priority value="ALL"/>
 		<appender-ref ref="socket"/>
+		<appender-ref ref="console"/>
 	</root>
 </log4j:configuration>
